เพิ่มเติมหน้าบริการ

--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -8,6 +8,6 @@
 
 body {
     font-family: "IBM Plex Sans Thai", serif;
-    background-color: #EA73D3;
+    background-color: #FEFAF2;
     color: #210000;
 }
