--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -23,7 +23,7 @@ nav {
 
         button {
             background-color: #e2f5f5;
-            border: 1px solid #ccc;
+            border: 1px solid #FFE0AD;
             border-radius: 20px;
             padding: 0.5rem 1rem;
             cursor: pointer;
