--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,7 +3,7 @@
 }
 
 .main-footer {
-    background-color: #FFF7F7;
+    background-color: #F6EEE0;
     padding: 2rem 4rem;
 
     .footer-container {
