--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -44,7 +44,7 @@
 }
 
 .bottom-footer {
-    background-color: #FFD38A;
+    background-color: #FFAEBC;
     text-align: center;
     padding: 10px 0;
     font-size: var(--text-normal);
