--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: #FFE0AD;
+    background-color: #FFAEBC;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
