--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: #FFAEBC;
+    background-color: #FFE0AD;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -23,7 +23,7 @@ nav {
 
         button {
             background-color: #e2f5f5;
-            border: 1px solid #FFE0AD;
+            border: 1px solid #ccc;
             border-radius: 20px;
             padding: 0.5rem 1rem;
             cursor: pointer;
