--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -55,3 +55,10 @@
         }
     }
 }
+select, button, input {
+    background-color: #ffe8b2;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
