--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -50,6 +50,8 @@
             padding: 15px;
             border: 3px solid #ccc;
             border-radius: 5px;
+            appearance: none; /* ป้องกันสไตล์เริ่มต้นของระบบ */
+            outline: none; /* ป้องกันเส้นขอบที่แตกต่างกัน */
 
         }
 
@@ -64,4 +66,6 @@ select, button, input {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    appearance: none; /* ป้องกันสไตล์เริ่มต้นของระบบ */
+    outline: none; /* ป้องกันเส้นขอบที่แตกต่างกัน */
 }
