--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -39,8 +39,8 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            justify-content: center;
-            gap: 2rem;
+            justify-content: center"";
+            gap: 5rem;
         }
 
         select {
